# Arcade

./: .gitignore  CMakeLists.txt  README.md
conf/: arcade_ncurses.conf  arcade_sdl.conf  arcade_sfml.conf  big-gum.conf  change-lib-text.conf  empty.conf  main-menu-bg.conf  textPseudo.conf
conf/centipede/: centipede-body-down.conf  centipede-body-left.conf  centipede-body-right.conf  centipede-head-down.conf  centipede-head-left.conf  centipede-head-right.conf  fire.conf  mushroom-1-4.conf  mushroom-3-4.conf  mushroom-full.conf  mushroom-half.conf  player.conf
conf/menu/: arrow-left.conf  arrow-right.conf  centipede-disk.conf  nibbler-disk.conf  pacman-disk.conf
conf/nibbler/: nibbler-body.conf  nibbler-down.conf  nibbler-food.conf  nibbler-left.conf  nibbler-map.txt  nibbler-map2.txt  nibbler-right.conf  nibbler-up.conf  wall3.conf
conf/pacman/: blue-monster.conf  eated_monster_blue.conf  eated_monster_white.conf  orange-monster.conf  pacgum.conf  pacman-down.conf  pacman-left.conf  pacman-map.txt  pacman-map2.txt  pacman-right.conf  pacman-up.conf  pink-monster.conf  portal.conf  red-monster.conf  wall.conf
conf/txt/: arcade_ncurses.txt  arcade_sdl.txt  arcade_sfml.txt  change-lib-text.txt  textPseudo.txt
include/: Clock.hpp  Core.hpp  Event.hpp  loadLib.hpp
include/Games/: Centipede.hpp  IGame.hpp  Nibbler.hpp  Pacman.hpp
include/Graphical/: AObject.hpp  GraphicalVector.hpp  IGraphical.hpp  IObject.hpp
include/Graphical/SDL/: SDLGraphical.hpp  SDLObject.hpp  SDLRectangleShape.hpp  SDLSprite.hpp  SDLText.hpp
include/Graphical/SFML/: SFMLGraphical.hpp  SFMLObject.hpp  SFMLRectangleShape.hpp  SFMLSprite.hpp  SFMLText.hpp
include/Graphical/ncurses/: NcursesGraphical.hpp  NcursesObject.hpp  NcursesSprite.hpp  NcursesText.hpp
include/Menu/: IMenu.hpp  mainMenu.hpp
src/: Clock.cpp  Core.cpp  loadLib.cpp  main.cpp
src/Games/: Centipede.cpp
src/Games/Nibbler/: Nibbler.cpp  NibblerGame.cpp
src/Games/Pacman/: Map.cpp  Pacman.cpp  Utils.cpp
src/Graphical/: AObject.cpp
src/Graphical/SDL/: CMakeLists.txt  SDLGraphical.cpp  SDLObject.cpp  SDLRectangleShape.cpp  SDLSprite.cpp  SDLText.cpp
src/Graphical/SFML/: CMakeLists.txt  SFMLGraphical.cpp  SFMLObject.cpp  SFMLRectangleShape.cpp  SFMLSprite.cpp  SFMLText.cpp
src/Graphical/ncurses/: CMakeLists.txt  NcursesGraphical.cpp  NcursesObject.cpp  NcursesSprite.cpp  NcursesText.cpp
src/Menu/: mainMenu.cpp
